logs/dag_id=test_dag_tutorial/run_id=scheduled__2023-01-01T000000+0000/task_id=create_postgres_table/attempt=1.log
[2023-11-02T11:26:19.726+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2023-01-01T00:00:00+00:00 [queued]>
[2023-11-02T11:26:19.741+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2023-01-01T00:00:00+00:00 [queued]>
[2023-11-02T11:26:19.741+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T11:26:19.742+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-11-02T11:26:19.743+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T11:26:19.760+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-01-01 00:00:00+00:00
[2023-11-02T11:26:19.794+0000] {standard_task_runner.py:55} INFO - Started process 3426 to run task
[2023-11-02T11:26:19.799+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'test_dag_tutorial', 'create_postgres_table', 'scheduled__2023-01-01T00:00:00+00:00', '--job-id', '540', '--raw', '--subdir', 'DAGS_FOLDER/test_dag_tutorial.py', '--cfg-path', '/tmp/tmpk1yoz03l']
[2023-11-02T11:26:19.800+0000] {standard_task_runner.py:83} INFO - Job 540: Subtask create_postgres_table
[2023-11-02T11:26:19.879+0000] {task_command.py:376} INFO - Running <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2023-01-01T00:00:00+00:00 [running]> on host 1dfdc0df4852
[2023-11-02T11:26:19.973+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=tetiana
AIRFLOW_CTX_DAG_ID=test_dag_tutorial
AIRFLOW_CTX_TASK_ID=create_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2023-01-01T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-01-01T00:00:00+00:00
[2023-11-02T11:26:19.982+0000] {base.py:71} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-11-02T11:26:19.986+0000] {sql.py:315} INFO - Running statement: 
        create table if not exists people (
        Index primary key,
        User_ID TEXT NOT NULL,
        Last_Name TEXT NOT NULL,
        Sex TEXT NOT NULL,
        Email TEXT NOT NULL,
        Phone TEXT NOT NULL,
        Date_of_birth date NOT NULL
        Job_Title  TEXT NOT NULL
        

        )
        , parameters: None
[2023-11-02T11:26:19.987+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "primary"
LINE 3:         Index primary key,
                      ^

[2023-11-02T11:26:19.996+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=test_dag_tutorial, task_id=create_postgres_table, execution_date=20230101T000000, start_date=20231102T112619, end_date=20231102T112619
[2023-11-02T11:26:20.013+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 540 for task create_postgres_table (syntax error at or near "primary"
LINE 3:         Index primary key,
                      ^
; 3426)
[2023-11-02T11:26:20.052+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-02T11:26:20.075+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2023-11-02T17:16:07.781+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2023-01-01T00:00:00+00:00 [queued]>
[2023-11-02T17:16:07.793+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2023-01-01T00:00:00+00:00 [queued]>
[2023-11-02T17:16:07.794+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T17:16:07.795+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-11-02T17:16:07.795+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T17:16:07.812+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-01-01 00:00:00+00:00
[2023-11-02T17:16:07.817+0000] {standard_task_runner.py:55} INFO - Started process 277 to run task
[2023-11-02T17:16:07.820+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'test_dag_tutorial', 'create_postgres_table', 'scheduled__2023-01-01T00:00:00+00:00', '--job-id', '25', '--raw', '--subdir', 'DAGS_FOLDER/test_dag_tutorial.py', '--cfg-path', '/tmp/tmpm1w9i_2f']
[2023-11-02T17:16:07.821+0000] {standard_task_runner.py:83} INFO - Job 25: Subtask create_postgres_table
[2023-11-02T17:16:07.931+0000] {task_command.py:376} INFO - Running <TaskInstance: test_dag_tutorial.create_postgres_table scheduled__2023-01-01T00:00:00+00:00 [running]> on host b0e711ae7c72
[2023-11-02T17:16:08.016+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=tetiana
AIRFLOW_CTX_DAG_ID=test_dag_tutorial
AIRFLOW_CTX_TASK_ID=create_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2023-01-01T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-01-01T00:00:00+00:00
[2023-11-02T17:16:08.028+0000] {base.py:71} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-11-02T17:16:08.032+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS people (
        Index SERIAL PRIMARY KEY,
        User_ID VARCHAR NOT NULL,
        Last_Name VARCHAR NOT NULL,
        Sex VARCHAR NOT NULL,
        Email VARCHAR NOT NULL,
        Phone VARCHAR NOT NULL,
        Date_of_birth DATE NOT NULL,
        Job_Title  VARCHAR NOT NULL
        

        )
        , parameters: None
[2023-11-02T17:16:08.054+0000] {taskinstance.py:1406} INFO - Marking task as SUCCESS. dag_id=test_dag_tutorial, task_id=create_postgres_table, execution_date=20230101T000000, start_date=20231102T171607, end_date=20231102T171608
[2023-11-02T17:16:08.072+0000] {local_task_job.py:164} INFO - Task exited with return code 0
[2023-11-02T17:16:08.094+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
